tests/baselines/reference/null.errors.txt
tests/cases/compiler/null.ts(8,5): error TS7027: Unreachable code detected.
tests/cases/compiler/null.ts(12,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/null.ts (2 errors) ====
    var x=null; 
    var y=3+x;  
    var z=3+null; 
    class C {
    }
    function f() {
        return null;
        return new C();
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    function g() {
        return null;
        return 3;
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    interface I {
        x:any;
        y:number;
    }
    var w:I={x:null,y:3};
    
    
    